@@ -69,9 +69,9 @@
 read_caps(Els) ->
     read_caps(Els, nothing).
 read_caps([#xmlel{ns = ?NS_CAPS, name = 'c'} = El | Tail], _Result) ->
-    Node = exmpp_xml:get_attribute(El, 'node'),
-    Version = exmpp_xml:get_attribute(El, 'ver'),
-    Exts = string:tokens(exmpp_xml:get_attribute(El, 'ext'), " "),
+    Node = exmpp_xml:get_attribute(El, 'node', ""),
+    Version = exmpp_xml:get_attribute(El, 'ver', ""),
+    Exts = string:tokens(exmpp_xml:get_attribute(El, 'ext', ""), " "),
     read_caps(Tail, #caps{node = Node, version = Version, exts = Exts});
 read_caps([#xmlel{ns = ?NS_MUC_USER, name = 'x'} | _Tail], _Result) ->
     nothing;
@@ -226,7 +226,7 @@ handle_cast({disco_response, From, _To, IQ},
 		{ok, {Node, SubNode}} ->
 		    Features =
 			lists:flatmap(fun(#xmlel{name = 'feature'} = F) ->
-					      [exmpp_xml:get_attribute(F, 'var')];
+					      [exmpp_xml:get_attribute(F, 'var', "")];
 					 (_) ->
 					      []
 				      end, Els),
